// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsItemSwitch renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#E6E6E6",
        "borderBottomWidth": 1,
        "marginHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <AndroidSwitch
        accessibilityRole="switch"
        enabled={true}
        on={true}
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        thumbTintColor="#E6E6E6"
        trackColorForFalse="#757575"
        trackColorForTrue="#1AB775"
        trackTintColor="#1AB775"
      />
    </View>
  </View>
</View>
`;

exports[`SettingsItemTextValue renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#E6E6E6",
        "borderBottomWidth": 1,
        "marginHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#757575",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
              "marginRight": 8,
            }
          }
          testID="testID/value"
        >
          value
        </Text>
        <svg
          fill="none"
          height={12}
          style={{}}
          testID="ForwardChevron"
          viewBox="0 0 8 16"
          width={6}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M.293.293a1 1 0 0 1 1.414 0l6 6a1 1 0 0 1 0 1.414l-6 6a1 1 0 0 1-1.414-1.414L5.586 7 .293 1.707a1 1 0 0 1 0-1.414Z"
            fill="#757575"
            fillRule="evenodd"
            style={{}}
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;

exports[`SettingsItemTextValue renders correctly without value 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#E6E6E6",
        "borderBottomWidth": 1,
        "marginHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      />
    </View>
  </View>
</View>
`;
